# mpc-infrastructure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.cjs  release-please-config.json
.github/workflows/: commitlint.yml  pr-title.yml  release-please.yml
docs/: partner-deploy-wrapper-code-proposal.md  partner-deploy-wrapper-design.md  partner-deploy-wrapper-toolset.md
key_scripts/generate_keys/: Cargo.toml
key_scripts/generate_keys/src/: main.rs
kubernetes/kustomize-example/: kustomize.md
kubernetes/kustomize-example/base/: helm-secrets-init.yaml  kustomization.yaml  redis-cluster.yaml  services.yaml
scripts/generate_keys/: Cargo.toml
scripts/generate_keys/.cargo/: config.toml
scripts/generate_keys/src/: main.rs
terraform/modules/mig_template/: main.tf  variables.tf
terraform/modules/multichain/: main.tf  variables.tf
terraform/partner-mainnet/: main.tf  network.tf  outputs.tf  resources.tf  terraform-mainnet-example.auto.tfvars  terraform-mainnet-example.tfvars  variables.tf
terraform/partner-mainnet/scripts/: startup.sh.tftpl
terraform/partner-testnet/: main.tf  outputs.tf  resources.tf  terraform-testnet-example.auto.tfvars  terraform-testnet-example.tfvars  variables.tf
tools/mpc_infra/: README.md  pyproject.toml
tools/mpc_infra/src/mpc_infra/: cli.py  config.py  constants.py  gcloud.py  models.py  render.py  terraform.py  ui.py  upgrade.py  validate.py
tools/mpc_infra/tests/: test_config.py  test_dynamic_secrets.py  test_plan_summary.py  test_render.py  test_status.py  test_upgrade.py
(+6 files in other folders)
