[package]
name = "generate_keys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
hex = "0.4.3"
hpke = { version = "0.11", features = ["std"] }
near-crypto = "0.27"
rand = "0.8"
sp-core = { version = "38.1", default-features = false, features = ["std"] }